Revise index.html for portfolio update
Updated the portfolio HTML structure and content.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,82 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>My Portfolio</title>
-        </head>
-    <body>
-        <h1>Hello, I'm Brittney!</h1>
-    </body>
+<head>
+    <title>Brittney's Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <header>
+        <h1>Brittney Nyamweya</h1>
+        <p>Aspiring Web Developer</p>
+    </header>
+
+    <section class="about">
+        <h2>About Me</h2>
+        <p>
+            I am learning web development and building projects to improve my skills.
+            I enjoy creating websites and solving problems with code.
+        </p>
+    </section>
+
+    <section class="skills">
+        <h2>My Skills</h2>
+        <ul>
+            <li>HTML</li>
+            <li>CSS (Learning)</li>
+            <li>JavaScript (Learning)</li>
+        </ul>
+    </section>
+
+    <section class="projects">
+        <h2>Projects</h2>
+        <p>More projects coming soon 🚀</p>
+    </section>
+
+    <footer>
+        <p>© 2026 Brittney Nyamweya</p>
+    </footer>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Brittney's Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <header>
+        <h1>Brittney Nyamweya</h1>
+        <p>Aspiring Web Developer</p>
+    </header>
+
+    <section class="about">
+        <h2>About Me</h2>
+        <p>
+            I am learning web development and building projects to improve my skills.
+            I enjoy creating websites and solving problems with code.
+        </p>
+    </section>
+
+    <section class="skills">
+        <h2>My Skills</h2>
+        <ul>
+            <li>HTML</li>
+            <li>CSS (Learning)</li>
+            <li>JavaScript (Learning)</li>
+        </ul>
+    </section>
+
+    <section class="projects">
+        <h2>Projects</h2>
+        <p>More projects coming soon 🚀</p>
+    </section>
+
+    <footer>
+        <p>© 2026 Brittney Nyamweya</p>
+    </footer>
+
+</body>
 </html>
