Enhance navigation and update section IDs in index.html
Added navigation links and updated section IDs for better accessibility.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
 <body>
 
     <header>
-        <h1>Brittney Nyamweya</h1>
-        <p>Aspiring Web Developer</p>
-    </header>
+    <h1>Brittney Nyamweya</h1>
+    <p>Aspiring Web Developer</p>
+
+    <!-- Navigation -->
+    <nav>
+        <a href="#about">About</a> |
+        <a href="#skills">Skills</a> |
+        <a href="#projects">Projects</a> |
+        <a href="#contact">Contact</a>
+    </nav>
+</header>
+
 
     <section class="about">
         <h2>About Me</h2>
@@ -17,62 +26,23 @@
             I am learning web development and building projects to improve my skills.
             I enjoy creating websites and solving problems with code.
         </p>
-    </section>
+    <section id="about" class="about">
+...
+</section>
 
-    <section class="skills">
-        <h2>My Skills</h2>
-        <ul>
-            <li>HTML</li>
-            <li>CSS (Learning)</li>
-            <li>JavaScript (Learning)</li>
-        </ul>
-    </section>
+<section id="skills" class="skills">
+...
+</section>
 
-    <section class="projects">
-        <h2>Projects</h2>
-        <p>More projects coming soon 🚀</p>
-    </section>
+<section id="projects" class="projects">
+...
+</section>
 
-    <footer>
-        <p>© 2026 Brittney Nyamweya</p>
-    </footer>
+<section id="contact" class="contact">
+    <h2>Contact Me</h2>
+    <p>Email: britneynyamweya133@gmail.com</p>
+</section>
 
-</body>
-</html>
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Brittney's Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-    <header>
-        <h1>Brittney Nyamweya</h1>
-        <p>Aspiring Web Developer</p>
-    </header>
-
-    <section class="about">
-        <h2>About Me</h2>
-        <p>
-            I am learning web development and building projects to improve my skills.
-            I enjoy creating websites and solving problems with code.
-        </p>
-    </section>
-
-    <section class="skills">
-        <h2>My Skills</h2>
-        <ul>
-            <li>HTML</li>
-            <li>CSS (Learning)</li>
-            <li>JavaScript (Learning)</li>
-        </ul>
-    </section>
-
-    <section class="projects">
-        <h2>Projects</h2>
-        <p>More projects coming soon 🚀</p>
-    </section>
 
     <footer>
         <p>© 2026 Brittney Nyamweya</p>
